--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <div class="visualInner layoutInner">
         <div class="visualText">
           <p>SAMPLE SAMPLE</p>
-          <p>THE HTML CORDING SAMPLE SITE</p>
-          <a class="visualContact" href="">CONTACT</a>
+          <p class="visualTitle">THE <span class="visualTitleColor">HTML</span> CORDING</br>SAMPLE <span class="visualTitleColor">SITE</span></p>
+          <a class="visualContact" href=""><span class="visualContactText">CONTACT</span></a>
         </div>
       </div><!--visualInner-->
     </div><!-- visual -->
