PC Style Complete

--- a/index.html
+++ b/index.html
@@ -44,25 +44,26 @@
     <div id="content">
       <div class="contentInner layoutInner">
         <div class="about">
-          <div class="aboutText">
-            <h2>KNOW ABOUT</h2>
-            <p>株式会社サンプルは、気の利いたデザインと気持ちのいいシステムを追求するWEB制作会社です</p>
+          <div class="aboutInner">
+            <h2 class="aboutTitle">KNOW ABOUT US</h2>
+            <hr class="aboutTitleUnderLine">
+            <p class="aboutText">株式会社サンプルは、気の利いたデザインと<br>気持ちのいいシステムを追求するWEB制作会社です。</p>
           </div><!-- aboutText -->
-          <div class="aboutContents">
-            <section class="aboutInner">
+          <div class="business">
+            <section class="businessInner">
               <img src="images/consultancy_logo.png">
-              <h3>COMSULTANCY</h3>
-              <p>問題の解決策となる戦略的WEBサイトを提案するために、顧客利益最大かの実現できる最適なサービスをたしかな根拠で提供致します。</p>
+              <h3 class="businessInnerTitle">COMSULTANCY</h3>
+              <p class="businessInnerText">問題の解決策となる戦略的WEBサイトを提案するために、顧客利益最大かの実現できる最適なサービスをたしかな根拠で提供致します。</p>
             </section>
-            <section class="aboutInner">
+            <section class="businessInner">
               <img src="images/marketing_logo.png">
-              <h3>MAKETING</h3>
-              <p>大型サイト〜LP制作・SEO・リスティング広告等を最大限活かせる「知識」と「分析力」を強みにするWebサイト制作とWebマーケティングを行っております。</p>
+              <h3 class="businessInnerTitle">MAKETING</h3>
+              <p class="businessInnerText">大型サイト〜LP制作・SEO・リスティング広告等を最大限活かせる「知識」と「分析力」を強みにするWebサイト制作とWebマーケティングを行っております。</p>
             </section>
-            <section class="aboutInner">
+            <section class="businessInner">
               <img src="images/research_logo.png">
-              <h3>REASERCH</h3>
-              <p>Webマーケティングの戦略シナリオ設計から、リード獲得・育成プロセスの構築、さらにはそれを支えるデータ活用、人材育成、社内知識の確立までフルサポートします。</p>
+              <h3 class="businessInnerTitle">REASERCH</h3>
+              <p class="businessInnerText">Webマーケティングの戦略シナリオ設計から、リード獲得・育成プロセスの構築、さらにはそれを支えるデータ活用、人材育成、社内知識の確立までフルサポートします。</p>
             </section>
           </div>
         </div><!-- about -->
