Mobile Header Create

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="header">
       <div class="headerInner layoutInner">
         <h1 class="headerLogo">SAMPLE</h1>
-        <nav>
+        <nav class="nav">
           <div class="toggle">
             <span class="toggleBar"></span>
             <span class="toggleBar"></span>
