Create Mobile Page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <title>課題</title>
 </head>
-<body id="body">
+<body id="body" class="body">
 
     <header id="header">
       <div class="headerInner layoutInner">
@@ -40,7 +40,7 @@
     <div class="visual">
       <div class="visualInner layoutInner">
         <div class="visualText">
-          <p>SAMPLE SAMPLE</p>
+          <p class="visualSubTitle">SAMPLE SAMPLE</p>
           <div class="visualTitle">
             <p>THE <span class="visualTitleColor">HTML</span> CORDING</p><p>SAMPLE <span class="visualTitleColor">SITE</span></p>
           </div>
@@ -59,17 +59,17 @@
           </div><!-- aboutText -->
           <div class="business">
             <section class="businessInner">
-              <img src="images/consultancy_logo.png">
+              <img class="businessInnerImg" src="images/consultancy_logo.png">
               <h3 class="businessInnerTitle">COMSULTANCY</h3>
               <p class="businessInnerText">問題の解決策となる戦略的WEBサイトを提案するために、顧客利益最大かの実現できる最適なサービスをたしかな根拠で提供致します。</p>
             </section>
             <section class="businessInner">
-              <img src="images/marketing_logo.png">
+              <img class="businessInnerImg" src="images/marketing_logo.png">
               <h3 class="businessInnerTitle">MAKETING</h3>
               <p class="businessInnerText">大型サイト〜LP制作・SEO・リスティング広告等を最大限活かせる「知識」と「分析力」を強みにするWebサイト制作とWebマーケティングを行っております。</p>
             </section>
             <section class="businessInner">
-              <img src="images/research_logo.png">
+              <img class="businessInnerImg" src="images/research_logo.png">
               <h3 class="businessInnerTitle">REASERCH</h3>
               <p class="businessInnerText">Webマーケティングの戦略シナリオ設計から、リード獲得・育成プロセスの構築、さらにはそれを支えるデータ活用、人材育成、社内知識の確立までフルサポートします。</p>
             </section>
@@ -79,7 +79,9 @@
     </div><!-- content -->
 
     <footer id="footer">
-      <p class="copyright"><small class="smallFont">&copy; Sample All Rights Reserved</small></p>
+      <div class="footerInner">
+        <p class="copyright"><small class="smallFont">&copy; Sample All Rights Reserved</small></p>
+      </div>
     </footer>
 
 </body>
