--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <title>課題</title>
 </head>
-<body id="body" class="body">
+<body id="body">
 
     <header id="header">
       <div class="headerInner layoutInner">
