--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
@@ -7,8 +7,8 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <!--[if lt IE 9]>
   <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+  <script src=”http://html5shiv-printshiv.googlecode.com/svn/trunk/html5shiv-printshiv.js”></script>
   <![endif]-->
-  <!-- Jquery -->
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js?ver=3.8.1"></script>
   <script type="text/javascript" src="navbar.js"></script>
 
