header and visual fix

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <title>課題</title>
 </head>
-<body id="body">
+<body class="body">
 
     <header id="header">
       <div class="headerInner layoutInner">
@@ -42,7 +42,8 @@
         <div class="visualText">
           <p class="visualSubTitle">SAMPLE SAMPLE</p>
           <div class="visualTitle">
-            <p>THE <span class="visualTitleColor">HTML</span> CORDING</p><p>SAMPLE <span class="visualTitleColor">SITE</span></p>
+            <p class="visualTitleFont">THE <span class="visualTitleColor">HTML</span> CORDING</p>
+            <p class="visualTitleFont">SAMPLE <span class="visualTitleColor">SITE</span></p>
           </div>
           <a class="visualContact" href=""><span class="visualContactText">CONTACT</span></a>
         </div>
