mobile design fix

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="aboutInner">
             <h2 class="aboutTitle">KNOW ABOUT US</h2>
             <hr class="aboutTitleUnderLine">
-            <p class="aboutText">株式会社サンプルは、気の利いたデザインと<br>気持ちのいいシステムを追求するWEB制作会社です。</p>
+            <p class="aboutText">株式会社サンプルは、気の利いたデザインと気持ちのいいシステムを追求するWEB制作会社です。</p>
           </div><!-- aboutText -->
           <div class="business">
             <section class="businessInner">
